# swagger_output.json
@@ -11,22 +11,67 @@
     "http"
   ],
   "paths": {
-    "/demo": {
-      "get": {
-        "description": "",
-        "responses": {
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    },
     "/add-team": {
       "post": {
-        "description": "",
+        "tags": [
+          "Team"
+        ],
+        "summary": "Create a new Team",
+        "description": "Create a new Team",
+        "parameters": [
+          {
+            "name": "obj",
+            "in": "body",
+            "required": true,
+            "description": "Team Detail Object",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "teamName": {
+                  "type": "string",
+                  "example": "Winner Team"
+                },
+                "players": {
+                  "type": "array",
+                  "example": [
+                    "MS Dhoni",
+                    "MJ Santner",
+                    "RD Gaikwad",
+                    "DP Conway",
+                    "N Jagadeesan",
+                    "Simarjeet Singh",
+                    "YBK Jaiswal",
+                    "JC Buttler",
+                    "SV Samson",
+                    "D Padikkal",
+                    "R Parag",
+                    "YS Chahal"
+                  ],
+                  "items": {
+                    "type": "string"
+                  }
+                },
+                "captain": {
+                  "type": "string",
+                  "example": "MS Dhoni"
+                },
+                "viceCaptain": {
+                  "type": "string",
+                  "example": "Robin Uthappa"
+                }
+              },
+              "required": [
+                "teamName",
+                "players",
+                "captain",
+                "viceCaptain"
+              ]
+            }
+          }
+        ],
         "responses": {
-          "200": {
-            "description": "OK"
+          "default": {
+            "description": ""
           }
         }
       }
